<resources>
    <string name="app_name">MediHow</string>

    <string name="title_activity_maps">Map</string>

    <string name="welcome_msg">Welcome!</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">YOUR_APP_ID</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fbYOUR_APP_ID</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="sign_in_button">Sign in</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="what_is_your_email">What is Your Email?</string>
    <string name="user_name">User Name</string>
    <string name="find_the_nearest_location">Find the nearest Location</string>


    <!-- Questions used for survey -->
    <string name="prove_identity">Do you have proof of identity? \n Examples include: citizenship/residency cards, permits, and passports.</string>
    <string name="prove_address">Do you have proof of address? \n Examples include: lease, letter from landlord, rent receipt, and any government id. </string>
    <string name="prove_income">Do you have proof of income or lack thereof? \n Examples include: Any wages, salaries, government benefits and letters proving income. </string>
    <string name="prove_dependent_care">Do you pay for child or elderly care services? \n Provide a written statement or receipts for services rendered. </string>
    <string name="prove_previous_insurance">Do you have previous health coverage? \n Provide all paperwork, if applicable.</string>
    <string name="prove_pregnancy">If you are currently pregnant, do you have proof of pregnancy?</string>
    <string name="prove_immigrant_status">If you are not a U.S Citizen, do you have immigration papers? \n Examples include Green Card, Visa, Passport, DACA.</string>
</resources>
