<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nyc.c4q.medihow.RegisterFragment"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_marginTop="90dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/what_is_your_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/user_name"
        android:hint="@string/user_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:inputType="textEmailAddress"/>
    <EditText
        android:id="@+id/emai_frag"
        android:hint="@string/email_address"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_frag"
        android:hint="@string/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/reg_in_button"
        android:hint="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>

</LinearLayout>
